(library
 (name ppx_windtrap)
 (public_name ppx_windtrap)
 (kind ppx_rewriter)
 (libraries ppxlib)
 (preprocess
  (pps ppxlib.metaquot))
 (instrumentation.backend
  (ppx ppx_windtrap.coverage))
 (inline_tests.backend
  (runner_libraries windtrap)
  (generate_runner
   (progn
    (echo "let () = Windtrap.Ppx_runtime.init Sys.argv;;")
    (echo "let () = Windtrap.Ppx_runtime.exit ();;")))
  (list_partitions_flags
   "inline-test-runner"
   %{library-name}
   -list-partitions)
  (flags
   "inline-test-runner"
   %{library-name}
   -partition
   %{partition}
   -source-tree-root
   %{workspace_root}
   -diff-cmd
   -)))
