(test
 (name test_windtrap)
 (modules test_windtrap)
 (libraries windtrap windtrap.prop))

(test
 (name test_myers)
 (modules test_myers)
 (libraries windtrap windtrap.myers))

(test
 (name test_coverage)
 (modules test_coverage)
 (libraries windtrap.coverage))

(test
 (name test_ppx)
 (libraries windtrap)
 (preprocess
  (pps ppx_windtrap)))
