(library
 (name example_ppx_lib)
 (libraries windtrap)
 (inline_tests)
 (preprocess
  (pps windtrap.ppx)))

; Alternative: use an executable instead of a library to keep test files out of
; releases. Windtrap writes .corrected files automatically when running inside
; dune; (diff?) lets dune promote pick them up.
;
; (executable
;  (name main)
;  (libraries windtrap)
;  (preprocess
;   (pps windtrap.ppx)))
;
; (rule
;  (alias runtest)
;  (action
;   (progn
;    (run ./main.exe)
;    (diff? main.ml main.ml.corrected))))
