(library
 (name ppx_windtrap)
 (public_name windtrap.ppx)
 (kind ppx_rewriter)
 (instrumentation.backend
  (ppx windtrap.ppx))
 (libraries ppxlib)
 (ppx_runtime_libraries windtrap.coverage)
 (preprocess
  (pps ppxlib.metaquot))
 (inline_tests.backend
  (runner_libraries windtrap)
  (generate_runner
   (progn
    (echo "let () = Windtrap.Ppx_runtime.init Sys.argv;;")
    (echo "let () = Windtrap.Ppx_runtime.exit ();;")))
  (list_partitions_flags
   "inline-test-runner"
   %{library-name}
   -list-partitions)
  (flags
   "inline-test-runner"
   %{library-name}
   -partition
   %{partition}
   -source-tree-root
   %{workspace_root}
   -diff-cmd
   -)))
